--- a/css/style.css
+++ b/css/style.css
@@ -11,17 +11,21 @@ p {
 	line-height: 30px;
 }
 
+
+/*header*/
 nav {
-	color:black;
+	color:white;
 	font-size: 24px;
 	width:100%;
 }
 #menu {
 	position:fixed;
 	background: #5a534c;
+	width:100%;
 }
 #menu img {
 	width:150px;
+	margin:5px;
 }
 #navbar {
 	margin:20px auto;
@@ -29,12 +33,39 @@ nav {
 #navbar a {
 	padding:0 25px;
 	text-decoration: none;
-	color:black;
+	color:white;
 	display:inline-block;
 	width:150px;
 	text-align: center;
 }
 #navbar a:hover {
 	font-weight: bold;
-	color:#db9a3e;
+	color:yellow;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*footer*/
+footer {
+	background-color: #5a534c;
+}
+footer p {
+	padding:10px;
+}
+footer a {
+	text-decoration: none;
+	color:white;
 }
