--- a/css/style.css
+++ b/css/style.css
@@ -56,14 +56,14 @@ nav {
 .block {
 	background-color:#a4cce4;
 	border-radius:5px;
-	padding:5px;
+	padding:15px;
 	color:black;
 	margin-top:50px;
 	margin-bottom:50px;
 }
 .block img {
-	margin:5px;
-	width:250px;
+
+	width:100%;
 }
 .block h3 {
 	font-size:25px;
