--- a/css/style.css
+++ b/css/style.css
@@ -75,8 +75,7 @@ nav {
 
 /*contact */
 #contact {
-	margin:150px 0;
-	min-height:750px;
+	margin:100px 0;
 }
 #contact h1 {
 	width:400px;
@@ -106,6 +105,10 @@ nav {
 
 /*footer*/
 footer {
+	position: absolute;
+	left:0;
+	bottom:0;
+	width:100%;
 	background-color: #5a534c;
 	color:white;
 }
