--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ nav {
 	color:white;
 	font-size: 24px;
 	width:100%;
+	top:0;
 }
 #menu {
 	position:fixed;
@@ -136,7 +137,6 @@ nav li li:last-child a {
 
 /*footer*/
 footer {
-	position: absolute;
 	left:0;
 	bottom:0;
 	width:100%;
