--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,6 @@ nav {
 
 /*footer*/
 footer {
-	position: absolute;
 	left:0;
 	bottom:0;
 	width:100%;
@@ -120,4 +119,8 @@ footer p {
 footer a {
 	text-decoration: none;
 	color:white;
+}
+
+#sticky {
+	position:absolute;
 }
