--- a/css/style.css
+++ b/css/style.css
@@ -109,12 +109,6 @@ nav li li:last-child a {
 
 
 
-
-
-
-
-
-
 /*footer*/
 footer {
 	background-color: #5a534c;
@@ -151,6 +145,16 @@ footer a {
 	text-decoration: none;
 	transform: scale(1.5, 1.5);
 }
+
+#sticky {
+	position:absolute;
+	left:0;
+	bottom:0;
+	width:100%;
+	background-color: #5a534c;
+}
+
+
 
 /*lifestyle */
 .block1 {
