--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,16 @@
+@import url(https://fonts.googleapis.com/css?family=Montserrat);
+
+body {
+	width:100%;
+	font-family: 'Montserrat', sans-serif;
+	color:black;
+	font-size: 20px;
+}
+p {
+	font-size: 20px;
+	line-height: 30px;
+}
+
 
 /*header*/
 nav {
@@ -94,26 +107,7 @@ nav li li:last-child a {
 }
 
 
-/*contact */
-#contact {
-	margin:100px 0;
-}
-#contact h1 {
-	width:400px;
-	margin:100px auto;
-}
-#contact a {
-	font-size:30px;
-	color:#8f8f8f;
-	line-height: 3.5em;
-	display:inline-block;
-	transition: all 0.3s;
-}
-#contact a:hover {
-	color:black;
-	text-decoration: none;
-	transform: scale(1.5, 1.5);
-}
+
 
 
 /*footer*/
@@ -130,7 +124,6 @@ footer a {
 	text-decoration: none;
 	color:white;
 }
-
 
 /*contact */
 #contact {
@@ -163,10 +156,7 @@ footer a {
 }
 
 
-<<<<<<< HEAD
-=======
 
->>>>>>> lifestyle
 /*lifestyle */
 .block1 {
 	background-color:#a4cce4;
